stonfi_api_client/tests/ui/exhaustive_response_match.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/ui/exhaustive_response_match.rs:4:11
   |
 4 |     match response {
   |           ^^^^^^^^ pattern `_` not covered
   |
note: `V1Response` defined here
  --> src/v1/response.rs
   |
   | pub enum V1Response {
   | ^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `V1Response`
   = note: `V1Response` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
16 ~         V1Response::TransactionQuery(_) => {},
17 +         _ => todo!()
   |
